--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0-alpha1'
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
+
+    //Extra libraries
+    compile 'com.android.support:design:28.0.0'
+    compile 'com.github.lguipeng:BubbleView:1.0.1'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
